# zume

./: .gitignore  README.md  package.json  tsconfig.json
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  main.rs  models.rs  reminders.rs
src-ts/: main.ts  types.ts
